# code-outline-project

./: .gitignore  LICENSE  README.md  pyproject.toml
code_outline/: code_outline.py  config.json.example
