[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-outline"
version = "0.1.0"
description = "Scan a folder and generate a structured PROJECT_OVERVIEW.md with package manifests and file summaries."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Tristan Gemzon" }]
dependencies = [
  "httpx>=0.27.0",
  "rich>=13.7.0"
]

[project.urls]
Homepage = "https://github.com/tristangemzon/code-outline"
Issues = "https://github.com/tristangemzon/code-outline/issues"

[project.scripts]
code-outline = "code_outline.code_outline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["code_outline*"]